--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,8 @@
 {
-    "/api*": {
+    "/cl/falabella/*": {
         "target": "http://localhost:8080",
         "secure": false,
+        "changeOrigin": true,
         "logLevel": "debug"
     }
 }
